--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,10 @@ nav {
   width: 50%; }
 
 [class^="article-"] {
-  width: 20%; }
+  width: 20%;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  margin-right: 5%; }
 
 .nav-list {
   display: flex;
@@ -33,7 +36,11 @@ nav {
 
 footer {
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%; }
 
 article {
   padding-left: 10px;
